--- a/locales/de.json
+++ b/locales/de.json
@@ -1,38 +1,39 @@
 {
     "head": {
-        "title": "YAC Hosting"
+        "title": "Main Desktop Dashboard"
     },
     "navBar": {
         "home": {
             "path": "/",
-            "name": "HOME"
+            "name": "TOP"
         },
-        "products": {
-            "path": "#products",
-            "name": "PRODUKTE"
+        "actions": {
+            "path": "#actions",
+            "name": "ACTIONS"
         },
-        "pricing": {
-            "path": "#pricing",
-            "name": "TARIFE"
-        },
-        "services": {
-            "path": "#services",
-            "name": "SERVICES"
+        "stats": {
+            "path": "#stats",
+            "name": "STATS"
         },
         "about": {
             "path": "#about",
-            "name": "ÜBER UNS"
+            "name": "ABOUT"
         },
         "contact": {
             "path": "#contact",
-            "name": "KONTAKT"
-        },
-        "login": {
-            "path": "/login",
-            "name": "LOGIN"
+            "name": "CONTACT"
         }
     },
     "content": {
-        "home": "Lorem ipsum dolor sitzen amet, consectetur adipiscing elit, sed tempor und Vitalität, so dass die Arbeit und Trauer, einige wichtige Dinge zu tun eiusmod. Im Laufe der Jahre werde ich kommen, die den Vorteil der Bewegung aus ihr herausholen wird, so dass Stimulierungsbemühungen den Schulbezirk und die Langlebigkeit betreffen. Willst du ein Schmerz im Cupidatat Cillum sein, wurde in der Duis et Dolore Magna Flucht kritisiert, die kein daraus resultierendes Vergnügen hervorruft. Excepteur cupidatat Schwarze sind keine Excepteur, beruhigen die Seele, das heißt, sie sind meine Arbeit, sie verlassen, der General ist schuld daran, dass Dienstleistungen sein sollten"
+        "actions": {
+            "monitorSleep": "Set Monitors to Sleep",
+            "pcSleep": "Set PC to Sleep",
+            "pcHibernate": "Hibernate PC",
+            "pcShutdown": "Shutdown PC"
+        },
+        "home": {
+            "home": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed tempor and vitality, so that the labor and sorrow, some important things to do eiusmod. Over the years, I will come, who will nostrud aliquip out of her the advantage of exercise, so that stimulus efforts if the school district and longevity. Want to be a pain in the cupidatat cillum has been criticized in the Duis et dolore magna flee produces no resultant pleasure. Excepteur cupidatat blacks are not excepteur, is soothing to the soul, that is, they are my toil, they deserted the general is to blame that services should be"
+
+        }
     }
 }
